// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action should apply transformation on icon 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className=""
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <Icon
    name="talend-caret-down"
    transform="rotate-180"
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should display a Progress indicator if set 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="navbar-btn undefined"
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <CircularProgress
    size="small"
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should display a disabled Icon 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="navbar-btn undefined"
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <Icon
    name="talend-caret-down"
    transform={undefined}
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should pass all props to the Button 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="navbar-btn"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <Icon
    name="talend-caret-down"
    transform={undefined}
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should render a button 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className=""
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <Icon
    name="talend-caret-down"
    transform={undefined}
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should render a button with a overlay component 1`] = `
<span>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        placement="right"
      >
        [Function]
      </Popover>
    }
    placement="bottom"
    rootClose={true}
    trigger="click"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className=""
      disabled={false}
      onClick={null}
      onMouseDown={null}
      role={null}
    >
      <Icon
        name="talend-caret-down"
        transform={undefined}
      />
      <span>
        Click me
      </span>
    </Button>
  </OverlayTrigger>
</span>
`;

exports[`Action should render a button without an overlay component if inProgress is true 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className="undefined"
  disabled={true}
  onClick={null}
  onMouseDown={null}
  role={null}
>
  <CircularProgress
    size="small"
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should render action with html property name = props.name if set 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className=""
  disabled={false}
  name="custom_name"
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <Icon
    name="talend-caret-down"
    transform={undefined}
  />
  <span>
    Click me
  </span>
</Button>
`;

exports[`Action should reverse icon/label 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  className=""
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
  role={null}
>
  <span>
    Click me
  </span>
  <Icon
    name="talend-caret-down"
    transform={undefined}
  />
</Button>
`;
